# extractPlanes

./: .gitignore  README.md  extractPlanesFromAScene_report.cpp  extractPlanesFromAScene_report_v2.cpp  foldersAddedToPath.txt  loadPCD_process_savePLY.cpp  loadPLY_process_savePLY.cpp  loadPLY_process_savePLYbyFrames.cpp  loadPLY_process_savePLYbyFrames_v2.cpp  loadPLY_process_savePLYbyFrames_v3.cpp  loadPLY_process_savePLYbyFrames_vfilterGround.cpp  loadPLY_process_savePLYbyFrames_vfilterGround_satisticalFilter_v2.cpp  loadPLY_process_savePLYbyFrames_vfilterGround_v2.cpp  loadPLYandFindPlanes.cpp  notas17Dic2021.txt  qRANSAC_SD.cpp
assessPoses/: assessEstimatedPoses.m  assessEstimatedPoses_test.m  assessEstimatedPoses_test2.m  assessEstimatedPoses_test3.m  assessGlobalEstimations.m  assessLocalEstimations.m  compareBoxes.m  compareBoxes_test.m  compareBoxes_v1.m  comparePlanes.m  comparePlanes_v2.m  compare_eADDvsTheta.m  compare_eADDvsTheta_lateralPlanes.m  compare_eADDvsTheta_topPlanes.m  computeAssessmentByDataset_vboxDetection.m  computeAssessmentByDataset_vplaneTracking.m  computeAssessmentBySession_vboxDetection.m  computeAssessmentBySession_vplaneTracking.m  computeDetectionMetricsByDataset_minitab.m  computeDetectionMetricsBySession.m  computeEstimatedGlobalPlanesByType.m  computeFN.m  computeFN_vboxDetection.m  computeMatchID.m  computeMeanMetrics.m  computeMeanMetrics_test.m  computeMeanMetrics_test2.m  computeMetricsByFrame.m  computeMetricsByFrame_lateralPlanes.m  computeMetricsByFrame_test.m  computeMetricsByFrame_test2.m  computeMetricsByFrame_topPlanes.m  computeMetricsByFrame_topPlanes_v2.m  computeMetricsByFrame_v2.m  computeMetricsByFrame_v3.m  computeMetricsByFrame_v3_test.m  computeMetricsByFrame_v3_test2.m  computeMetricsByFrame_v3_test3.m  computeMetricsByFrame_v3_test4.m  computeMetricsByFrame_v4.m  (+70 more)
detectPlanesScripts/: addDistanceToCamera.m  applyTransformation.m  classifyPlanes.m  computeAllPlanesIds.m  computeAlpha.m  computeAngleBtwnVectors.m  computeAngleBtwnVectors_test.m  computeBoundingPlanev2.m  computeDescriptiveStatisticsOnPlanes_v2.m  computeL1L2Parallel.m  computeL1L2Perpendicular_v2.m  computeLengthBounds_v2.m  computeTransformations.m  createBoxPCv4.m  detectPlanes.m  detectPlanes_test.m  detectPlanes_test2.m  dibujarlinea.m  dibujarsistemaref.m  fillDerivedDescriptors_Annotation.m  fillDerivedDescriptors_PK.m  from1DtoTform.m  fusePointCloudsFromDetectedPlanes.m  fusePointCloudsFromDetectedPlanes_test.m  fusePointCloudsFromDetectedPlanes_test_v2.m  fusePointCloudsFromDetectedPlanes_v2.m  getPPS_v0.m  getPPS_v2.m  getPreviousKnowledge_vo.m  heightFilterPrllel.m  includePreviousKnowledge_Plane_v2.m  includePreviousKnowledge_Plane_v3.m  intersect_lines.m  lengthFilter.m  loadExtractedPlanes.m  loadExtractedPlanesByFrame.m  loadExtractedPlanes_test.m  loadLengths.m  loadPlaneParameters.m  loadPlanes_v4.m  (+14 more)
examples/: Th2m.txt  computeVisiblePlanesInSyntheticPCs.m  convertPK2PlaneObjects_test.m  copyFilesTo6DViCuT.m  createMoCapDescriptors_json.txt  createRawHL2.txt  createRawKinect.txt  detectPlanes_test.m  detectPlanes_test_v2.m  detectPlanes_test_v3.m  detectPlanes_test_v4.m  fig_9.m  frame11.ply  myICPexample_v2.m  myICPexample_v3.m  myICPexample_v4.m  myICPexample_v5.m  myICPexample_v6.m  myICPexample_v7.m  myICPexample_v7_v2Boxes.m  myNormalizeVector.m  pcBox17_S4.mat  pcFused7.mat  pcFused_s10_b17.mat  pcFused_s10_b17_3s.mat  pcFused_s10_b17b13.mat  pcFused_s12_b16.mat  pcFused_s12_b16_3s.mat  pcFused_s12_b16b18.mat  pcFused_s12_b19_3s.mat  pcFused_s13_b15.mat  pcFused_s13_b16_3s.mat  pcFused_s13_b17_3s.mat  pcFused_s13_b19_3s.mat  pcFused_s13_b19b16.mat  pcFused_s15_b17.mat  pcFused_s16_b29.mat  pcFused_s17_b17_3s.mat  pcFused_s17_b17b18.mat  pcFused_s17_b18.mat  (+61 more)
extractPlanesFromAScene/: CMakeLists.txt  extractPlanesFromScene.cpp  instructionsBuildCompileRun_Project.txt  instructionsBuildCompileRun_Project_6DViCuT.txt  instructionsBuildProject.txt  radme.txt
extractPlanesUbuntu/: readme.txt
extractPlanesUbuntu/libraryInstallationScripts/ransac/: .gitattributes  CMakeLists.txt  RansacConfig.cmake.in  RansacConfigVersion.cmake.in  ransac.pc.in
extractPlanesUbuntu/libraryInstallationScripts/tests/pcl/: CMakeLists.txt  example_get_max_min_coordinates.cpp  runCmake.sh
extractPlanesUbuntu/libraryInstallationScripts/tests/ransac/: .gitattributes  CMakeLists.txt  main.cpp  runCmake.sh
filterOfPlanes/: build2DallignedData.m  build2DallignedDataDiag.m  computeArea.m  computeBoundingPlanev2.m  computeFartherPoint.m  computeL1L2.m  computeL1L2Parallel.asv  computeL1L2Parallel.m  computeL1L2Perpendicular.m  computeNormalType.m  computeT_rotArbitrayAxis.m  dibujarsistemaref.m  flowdiagram.jfif  intersect_lines.m  mainBoxDetector.m  mainBoxDetector_v2.m  mainFilterPlanesv1.m  mainFilterPlanesv2.m  mainFilter_vpoo.m  mainFilter_vpoo_v2.m  mainFilter_vpoo_v3.m  mainFilter_vpoo_v4.m  measurePlaneParameters.m  measurePlaneParametersv2.m  mianFeatures_expectedPlanes.m  my2DRot.m  myPlotBox.m  myPlotPlanes.m  onePlane.ply  onePlane2.ply  passByreferenceTest.m  plane.m  projectInEdge.m  scene5DetectedPlanes.txt  scene5Planes.txt  secondPlaneDetection.m  selectCorners.m  templateComputePlaneLength.m  templateComputePlaneLength_v2.m  testComputeArea.m  (+6 more)
icp/: example.m  example2.m  example3.m  myICPexample.m  readme.txt
incrementalApproachPlanes/: Main_extractPlanes.m  Main_extractPlanes_v2.m  Main_secondStage.m  Main_secondStage_v2.m  addNewParticles.m  addNewParticlesForNullCases.m  assessEstimatedPoses_ia1.m  assessEstimatedPoses_ia1_v2.m  assessEstimatedPoses_ia1_v3.m  assessEstimatedPoses_ia1_v4.m  assessEstimatedPoses_ia2.m  assessEstimatedPoses_ia2_v2.m  assessEstimatedPoses_ia2_v3.m  assessEstimatedPoses_ia2_v4.m  assessEstimatedPoses_ia2_v5.m  assessEstimatedPoses_test3.m  assessEstimatedPositions_ia1_woutPK.m  associateParticlesWithGlobalPlanes.m  associateParticlesWithGlobalPlanes_vcuboids.m  bugFunction.m  combineCommonType4.m  compareParticlesvsLocalPlanes.m  compareParticlesvsLocalPlanes_vcuboid.m  computeDiffFeaturesBtwnPlanes.m  (+117 more)
(+1004 files in other folders)
